--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 -- Version 0.1.0 (unreleased) --
 
+* Mark stream replacements as experimental. They are mostly untested
+  and I don't really use them.
+* Add PATHIE_BUILD_STREAM_REPLACEMENTS for building the stream
+  replacements.
 * Rename build option ASSUME_UTF8_ON_UNIX to
   PATHIE_ASSUME_UTF8_ON_UNIX.
 * Switch license from GPL3 to BSD-2clause.
