--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 -- Version 0.1.0 (unreleased) --
 
+* Add Path::operator/=.
 * Add `const' qualifier to Path::fopen() and Path::touch() as these
   methods leave the path itself unchanged.
 * Add C++98 compatibility (instead of just C++11).
